SteveHorses OLD/logs/run_20250823_110548.log
  File "/Users/stephenjerome/Desktop/SteveHorses/steve_horses_board.py", line 74
    }}
     ^
SyntaxError: unmatched '}'
